<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/thirty"
    android:layout_marginBottom="@dimen/thirty"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/twenty"
        app:layout_constraintBaseline_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/otp_verification"
            android:textSize="@dimen/text_size_twenty"
            android:textStyle="bold"
            android:id="@+id/otp_verification"
            android:layout_marginBottom="@dimen/twenty"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="@color/colorPrimary"
            app:layout_constraintBaseline_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/twenty"
            android:text="@string/otp_verification_text"
            android:id="@+id/otp_verification_text"
            app:layout_constraintTop_toBottomOf="@+id/otp_verification"
            android:layout_marginBottom="@dimen/twenty"
            app:layout_constraintStart_toStartOf="parent"
            android:textAlignment="center"/>

        <com.example.infyproject.utills.OTPEditText
            android:id="@+id/otp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/twenty"
            android:autofillHints="smsOTPCode"
            android:hint="@string/otp"
            android:importantForAutofill="yes"
            android:minHeight="@dimen/forty_eight"
            android:textAlignment="center"
            app:layout_constraintBaseline_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/otp_verification_text" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="@dimen/forty_eight"
            android:layout_margin="@dimen/twenty"
            android:textColor="@color/white"
            android:id="@+id/dialog_submit"
            android:background="@drawable/login_button_bg"
            app:layout_constraintTop_toBottomOf="@+id/otp"
            android:text="@string/submit"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>