<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/three_hundred"
        android:id="@+id/constraint_layout"
        android:background="@drawable/login_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/image_desc"
            android:src="@drawable/infy_logo"
            android:padding="@dimen/hundred"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/thirty"
            android:layout_marginBottom="@dimen/thirty"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_sixteen"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/twenty"
        android:layout_marginEnd="@dimen/twenty"
        android:id="@+id/constraint_input_layout"
        app:layout_constraintTop_toBottomOf="@+id/constraint_layout">

        <androidx.cardview.widget.CardView
            android:id="@+id/username_cardview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/thirty"
            android:layout_marginBottom="@dimen/thirty"
            android:layout_marginEnd="@dimen/ten"
            android:layout_marginStart="@dimen/ten"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:cardCornerRadius="@dimen/fifteen"
            app:cardElevation="@dimen/five">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/ten"
                android:src="@drawable/username"
                android:contentDescription="@string/image_desc"
                app:tint="@color/grey" />


            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/forty"
                android:background="@drawable/edit_text_bg"
                android:maxLines="1"
                android:inputType="text"
                android:hint="@string/username"
                android:padding="@dimen/twelve" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/password_cardview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/username_cardview"
            android:layout_marginTop="@dimen/thirty"
            android:layout_marginEnd="@dimen/ten"
            android:layout_marginStart="@dimen/ten"
            app:layout_constraintTop_toBottomOf="@+id/username_cardview"
            android:layout_marginBottom="@dimen/fifty"
            app:cardCornerRadius="@dimen/fifteen"
            app:cardElevation="@dimen/five">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/ten"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/image_desc"
                android:src="@drawable/password"
                app:tint="@color/grey" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/forty"
                android:background="@drawable/edit_text_bg"
                android:hint="@string/password"
                android:maxLines="1"
                android:inputType="textPassword"
                android:padding="@dimen/twelve" />

        </androidx.cardview.widget.CardView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password_cardview"
            android:layout_marginTop="@dimen/forty"
            android:background="@drawable/login_button_bg"
            android:text="@string/login"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/password_cardview"
            tools:ignore="DuplicateSpeakableTextCheck" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/ten"
        android:layout_marginBottom="@dimen/ten"
        android:textSize="@dimen/text_size_sixteen"
        android:id="@+id/connect_text"
        app:layout_constraintTop_toBottomOf="@+id/constraint_input_layout"
        app:layout_constraintBottom_toTopOf="@+id/button_layout"
        android:text="@string/connect_text"
        android:textAlignment="center"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_layout"
        app:layout_constraintCircleRadius="@dimen/zero"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        android:layout_marginBottom="@dimen/ten"
        app:layout_constraintTop_toBottomOf="@+id/connect_text"
        app:layout_constraintBottom_toTopOf="@+id/register"
        app:layout_constraintBaseline_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="@dimen/eighty"
            android:layout_height="@dimen/fifty"
            android:id="@+id/google_button_layout"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            android:background="@drawable/social_icon_bg">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/google_icon"
                android:padding="@dimen/five"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="@dimen/eighty"
            android:layout_height="@dimen/fifty"
            android:id="@+id/facebook_button_layout"
            app:layout_constraintStart_toEndOf="@id/google_button_layout"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="@dimen/ten"
            app:layout_constraintVertical_chainStyle="packed"
            android:background="@drawable/social_icon_bg">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/facebook_icon_login"
                android:padding="@dimen/five"
                android:contentDescription="@string/image_desc"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="@dimen/eighty"
            android:layout_height="@dimen/fifty"
            android:id="@+id/twitter_button_layout"
            app:layout_constraintStart_toEndOf="@+id/facebook_button_layout"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="@dimen/ten"
            android:background="@drawable/social_icon_bg">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/twitter_icon_login"
                android:padding="@dimen/five"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/twenty"
        android:id="@+id/register"/>

</androidx.constraintlayout.widget.ConstraintLayout>